--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Pablo Sánchez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
