--- a/package.json
+++ b/package.json
@@ -1,53 +1,18 @@
 {
   "name": "finalpractice-alu119380",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/server.js",
+  "description": "Hospital Management",
+  "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "jest",
-    "test:integration": "jest test/integration"
+    "dev": "nodemon src/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://git.at-usj.net/AT-24-25/finalpractice-alu119380.git"
-  },
-  "author": "Pablo Sánchez",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "junit": "^1.4.9",
-    "sqlite3": "^5.1.7",
-    "swagger-ui-express": "^5.0.1",
-    "typescript": "^5.7.3",
-    "yamljs": "^0.3.0"
+    "express": "^5.1.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
-  "keywords": [],
   "devDependencies": {
-    "dotenv": "^16.4.7",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "supertest": "^7.0.0"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "./test/integration/jest.setup.js"
-    ],
-    "testMatch": [
-      "**/test/**/*.test.js"
-    ],
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.js",
-      "!src/server.js",
-      "!src/db.js",
-      "!src/config/**/*.js"
-    ],
-    "coverageDirectory": "./coverage"
+    "nodemon": "^3.1.10"
   }
 }
